# mf_analyzer

./: README.md  build.sh  build_test.sh  test.sh
Coffee/: ._Coffee.cpp
Forward/: Forward.cpp
Transforms/: ._CMakeLists.txt  ._LLVMBuild.txt  CMakeLists.txt
Transforms/CallGraphPass/: CMakeLists.txt  Kubera.cpp  mf.cpp
Transforms/Coffee/: ._CMakeLists.txt  CMakeLists.txt  Coffee.cpp
Transforms/DetectP/: ._CMakeLists.txt  ._DetectP.cpp  CMakeLists.txt  DetectP.cpp
Transforms/Forward/: ._CMakeLists.txt  ._Forward.cpp  CMakeLists.txt  Forward.cpp
Transforms/Hello/: ._CMakeLists.txt  ._Hello.cpp  CMakeLists.txt  Hello.cpp
Transforms/LV/: ._CMakeLists.txt  ._LV.cpp  ._LV_err.cpp  CMakeLists.txt  LV.cpp  LV_err.cpp
Transforms/MyAccount/: ._CMakeLists.txt  CMakeLists.txt  MyAccount.cpp
Transforms/testHello/: ._CMakeLists.txt  ._testHello.cpp  CMakeLists.txt  testHello.cpp
Transforms/testModule/: ._CMakeLists.txt  ._testModule.cpp  .testModule.cpp.swp  CMakeLists.txt  testModule.cpp
code/: .secVul.c.swp  bbb.bc  er.bc  example.c  hello.bc  hello.c  input2.bc  kkk.bc  loop1.bc  loop1.c  loop2.c  multiple_func.c  secVul.c  secVulB.bc  simple_cfg.c  sss.bc  sss.s  test  test.bc  test.c  test.ex  vulC.c  vulCB.bc
