add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
add_subdirectory(testHello)
add_subdirectory(Coffee)
add_subdirectory(DetectP)
add_subdirectory(testModule)
add_subdirectory(MyAccount)
add_subdirectory(Forward)
